--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "optimal-select",
+  "name": "@johnnyxu/optimal-select",
   "description": "Get efficient & robust CSS selectors for HTML elements",
   "version": "4.0.1",
   "author": "Stefan Dühring | Autarc <autarc@gmail.com>",
+  "contributors": [
+    "suiyi8760 | Johnny <johnnyxuto17@gmail.com>"
+  ],
   "bugs": {
-    "url": "https://github.com/Autarc/optimal-select/issues"
+    "url": "https://github.com/suiyi8760/optimal-select"
   },
   "devDependencies": {
     "babel-loader": "^6.2.5",
@@ -26,7 +29,7 @@
     "open-url": "^2.0.2",
     "webpack": "^2.2.0-rc.2"
   },
-  "homepage": "https://github.com/Autarc/optimal-select",
+  "homepage": "https://github.com/suiyi8760/optimal-select",
   "keywords": [
     "css",
     "path",
@@ -38,7 +41,7 @@
   "module": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Autarc/optimal-select.git"
+    "url": "https://github.com/suiyi8760/optimal-select"
   },
   "scripts": {
     "prepublish": "npm run build",
