--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@johnnyxu/optimal-select",
   "description": "Get efficient & robust CSS selectors for HTML elements",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "author": "Stefan Dühring | Autarc <autarc@gmail.com>",
   "contributors": [
     "suiyi8760 | Johnny <johnnyxuto17@gmail.com>"
@@ -10,15 +10,19 @@
     "url": "https://github.com/suiyi8760/optimal-select"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.5",
+    "babel-loader": "7.1.5",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "4.1.6",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
+    "chai": "^4.3.4",
     "cheerio": "^0.22.0",
+    "cross-env": "^7.0.3",
     "deep-merge": "^1.0.0",
+    "eslint": "7.32.0",
     "fs-extra": "^1.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
@@ -26,8 +30,14 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
     "http-server": "^0.9.0",
+    "jsdom": "^18.0.0",
+    "mocha": "^9.1.3",
+    "mocha-chai-snapshot": "^1.0.0",
+    "nyc": "^15.1.0",
     "open-url": "^2.0.2",
-    "webpack": "^2.2.0-rc.2"
+    "sizzle": "^2.3.6",
+    "webpack": "^2.2.0-rc.2",
+    "wicked-good-xpath": "^1.3.0"
   },
   "homepage": "https://github.com/suiyi8760/optimal-select",
   "keywords": [
